# aoc2024

./: LICENSE  README.md  aoc2025.cabal
.github/workflows/: compiles.yml
day1/: Main.hs
day2/: Main.hs
day3/: Main.hs
day4/: Main.hs
day5/: Main.hs
src/: Aoc.hs
