cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             David Tennander
maintainer:         david.tennander@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Aoc
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   src
    default-language: GHC2024

executable day1
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        aoc2025
    hs-source-dirs:   day1
    default-language: GHC2024

executable day2
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        aoc2025
    hs-source-dirs:   day2
    default-language: GHC2024

executable day3
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        aoc2025
    hs-source-dirs:   day3
    default-language: GHC2024
